# cpl-coding-2

./: .gitignore  CMakeLists.txt  README.md
0-intro/: CMakeLists.txt  hello.c
1-types-io/: CMakeLists.txt  admin-scanf.c  admin.c  circle.c  mol.c  sphere  sphere.c
10-struct/: CMakeLists.txt  README.md  decl.c  echo  echo-flag.c  echo.c  musician.c  sort.c
11-linkedlist/: CMakeLists.txt  README.md  josephus  josephus.c
11-linkedlist/ll/: ll.c  ll.h
2-if-for-array/: CMakeLists.txt  README.md  leap-if-else-not.c  leap-if-else.c  leap.c  min-of-three.c  min-of-two.c  min.c  sum.c
3-for-a-while/: CMakeLists.txt  LICENCE  README.md  binary-search.c  counting-if.c  counting-switch.c  digits-do-while.c  digits-while.c  palindrome.c  prime.c  primes.c  selection-sort  selection-sort.c  stars.c
4-loops/: CMakeLists.txt  README.md  bubble-sort.c  common.c  continue.c  counting-if  counting-if.c  counting-if.txt  counting-switch.c  game-of-life  game-of-life.c  matrix-mult.c  merge.c
4-loops/life/: Beacon.txt  Blinker.txt  Block.txt  Toad.txt
5-function/: CMakeLists.txt  README.md  binary-search.c  game-of-life.c  gcd.c  guess.c  leap.c  merge.c  min.c  palindrome.c  prime.c  selection-sort  selection-sort.c  stars.c  sum.c  swap.c
6-recursion/: CMakeLists.txt  README.md  bsearch-re.c  fib-array.c  fib-iter.c  fib-re.c  gcd-euclid-iter.c  gcd-euclid-re.c  gcd-euclidean-iter.c  gcd-euclidean-re.c  merge-sort.c  min-re.c  sum-re.c
7-data-types/: CMakeLists.txt  README.md  compare.c  fp.c  rand.c  sums.c
8-pointer/: CMakeLists.txt  README.md  data.txt  pointer.c  selection-sort  selection-sort.c  strcmp.c  strcpy.c  strlen.c
9-pointer-more/: CMakeLists.txt  README.md  array-pointer.c  game-of-life-pointer  game-of-life-pointer.c  selection-sort-strings.c  sort.c  strcmp.c  strcpy.c  strlen.c
