cmake_minimum_required(VERSION 3.20)
project(c_pl_coding_2 C)

set(CMAKE_C_STANDARD 11)

add_subdirectory(0-intro)
add_subdirectory(1-types-io)
add_subdirectory(2-if-for-array)
add_subdirectory(3-for-a-while)
add_subdirectory(4-loops)
add_subdirectory(5-function)
add_subdirectory(6-recursion)
add_subdirectory(7-data-types)
add_subdirectory(8-pointer)
add_subdirectory(9-pointer-more)
add_subdirectory(10-struct)
add_subdirectory(11-linkedlist)