# loops
add_executable(merge merge.c)
add_executable(bubble-sort bubble-sort.c)

# arrays
add_executable(matrix-mult matrix-mult.c)
add_executable(game-of-life game-of-life.c)

# switch/case
add_executable(counting-if counting-if.c)
add_executable(counting-switch counting-switch.c)

# continue/goto
add_executable(continue continue.c)
add_executable(common common.c)