add_executable(leap-func leap.c)
add_executable(min-func min.c)
add_executable(prime-func prime.c)

add_executable(stars-func stars.c)

add_executable(binary-search-func binary-search.c)
add_executable(merge-func merge.c)
add_executable(selection-sort-func selection-sort.c)
add_executable(swap-func swap.c)

add_executable(palindrome-func palindrome.c)

add_executable(game-of-life-func game-of-life.c)
add_executable(guess-func guess.c)

add_executable(gcd-func gcd.c)